# ggml_test

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
examples/: CMakeLists.txt  README.md
examples/magika/: README.md  convert.py
examples/mlp/: CMakeLists.txt  README.md  convert-pth-to-ggml.py  convert.py  main.cpp  main_backend.cpp  main_ctx.cpp  model.py
examples/mlp/model/: mlp.gguf  mlp_cuda.gguf  three_layer_nn-ggml-model-f32.gguf  three_layer_nn.pth  two_layer_mlp.pth  two_layer_mlp_cuda.pth
examples/qwen.cpp/: qwen.h
examples/qwen.cpp/qwen_cpp/: convert.py
examples/qwen.cpp/qwen_cpp/qwen_cpp/: convert.py  test.ipynb
examples/resnet/: CMakeLists.txt  README.md  convert.py  resnet-ctx.cpp  resnet.py
examples/simple/: README.md  simple-backend.cpp  simple-ctx.cpp  simple.py
examples/simple-matrix/: CMakeLists.txt  README.md  simple-backend.cpp  simple-ctx.cpp
qwen.cpp/: README.md  main.cpp  qwen.cpp
